--- a/TesiIntercettazioniTelefoniche/app/src/main/res/values/strings.xml
+++ b/TesiIntercettazioniTelefoniche/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Tesi Intercettazioni Telefoniche</string>
+    <string name="user">ADD YOUR EMAIL ADDRESS HERE</string>
+    <string name="password">ADD YOUR PASSWORD HERE</string>
+    <string name="recipients">ADD RECIPIENT EMAIL HERE</string>
 </resources>
