--- a/TesiSensori/app/src/main/res/values/strings.xml
+++ b/TesiSensori/app/src/main/res/values/strings.xml
@@ -2,4 +2,10 @@
     <string name="app_name">Tesi Sensori</string>
     <string name="giroscopio">Giroscopio</string>
     <string name="accelerometro">Accelerometro</string>
+    <string name="starting">Starting...</string>
+    <string name="prossimit">Prossimità</string>
+    <string name="textview">TextView</string>
+    <string name="magnetometro">Magnetometro</string>
+    <string name="barometro">Barometro</string>
+    <string name="fotometro">Fotometro</string>
 </resources>
