--- a/TesiSensori/app/src/main/res/values/strings.xml
+++ b/TesiSensori/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="magnetometro">Magnetometro</string>
     <string name="barometro">Barometro</string>
     <string name="fotometro">Fotometro</string>
+    <string name="orientamento">Orientamento</string>
 </resources>
